# saas-2

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  KNOWN_LIMITATIONS.md  README.md  action.yml  adr.json  qa_task1_acceptance_test.py
.github/workflows/: ci.yml  eval-gate.yml
.local/state/gh/: device-id
deploy/: Dockerfile  docker-compose.yml
docs/: LAUNCH.md  PLAN.md  ti-workbench-e2e.md
platform/: README.md  pyproject.toml
platform/tests/: conftest.py  test_api.py  test_approval.py  test_config.py  test_core_ux.py  test_drift.py  test_eval.py  test_flywheel.py  test_hosted.py  test_limit_regression.py  test_metrics.py  test_perf.py  test_quota.py  test_scheduler.py  test_sse.py  test_stripe_billing.py  test_templates.py  test_tenancy.py  test_ti_adapter.py  test_ui.py  test_webhook_validation.py  test_worker.py
platform/ticloud/: __init__.py  billing.py  config.py  db.py  demo.py  metrics.py  models.py  stripe_billing.py  templates.py  validation.py
platform/ticloud/api/: auth.py  main.py  schemas.py
platform/ticloud/audit/: issue_candidates.md
platform/ticloud/engine/: __init__.py  base.py  offline.py  ti_adapter.py  ti_runner.py
platform/ticloud/eval/: __init__.py  base.py  cli.py  failures.py  judge.py  notify.py  rules.py
platform/ticloud/scheduler/: cron.py  queue.py  worker.py
platform/ticloud/web/: app.js  index.html  style.css
