[project]
name = "ticloud"
version = "0.1.0"
description = "Ti Cloud platform layer: agent-native cron/loop scheduler with quality gates, built around the Ti autonomous dev-team engine."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "croniter>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ticloud*"]

[tool.setuptools.package-data]
ticloud = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
