[project]
name = "ticloud"
version = "0.1.0"
description = "Agent-native cron scheduler with quality gates: run autonomous AI agents on a schedule, score every run, catch drift, and turn failures into regression tests."
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["ai-agents", "cron", "scheduler", "llm", "evals", "observability", "quality-gates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "croniter>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
postgres = [
    "psycopg2-binary>=2.9",
]
judge = [
    "anthropic>=0.40",
]
billing = [
    "stripe>=7.0",
]

[project.urls]
Repository = "https://github.com/x812033727/saas-2"
Issues = "https://github.com/x812033727/saas-2/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ticloud*"]

[tool.setuptools.package-data]
ticloud = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
